replace smaller with small

--- a/html/lesson_plans/africa_diaspora_empire_introduction.html
+++ b/html/lesson_plans/africa_diaspora_empire_introduction.html
@@ -100,7 +100,7 @@
 						<p>Anonymous Asante Artist. <a aria-label="External Link" href="https://africa.si.edu/collections/objects/8582/wrapper?ctx=65a356ddbacf3a7d0a21a8f266e1d934898d46eb&idx=0">Wrapper</a>. Mid-late nineteenth century. Textile and Fiber Arts, Smithsonian National Museum of African Art, 83-3-8. Used for educational use consistent with the principles of fair use under Section 108 of the U.S. Copyright Act. Adinkra cloths were historically worn by Asante royalty during times of mourning. This one was worn by Asantehene Agyeman Prempeh I, the thirteenth king of the Asante state, when he was finally deposed by the British in January 1896 after years of resistance.</p>
 					</section>
 
-					<section class="smaller" aria-labelledby="citation">
+					<section class="small" aria-labelledby="citation">
 						<h3 id="citation">Page Citation (MLA)</h3>
 						<p>Sophia Hsu, Carolyn Betensky, Melissa Free, Ji Eun Lee, and Cherrie Kwok. “Africa, Diaspora, and the British Empire: Introduction.”  <em>Undisciplining the Victorian Classroom</em>, 2021, <a href="/html/lesson_plans/africa_diaspora_empire_introduction.html" class="cite-link">https://undiscipliningvc.org/html/lesson_plans/africa_diaspora_empire_introduction.html</a>.</p>
 					</section>
