--- a/html/lesson_plans/east_asia_psychoactive_revolution.html
+++ b/html/lesson_plans/east_asia_psychoactive_revolution.html
@@ -258,7 +258,7 @@
 						<p>Anonymous. “<a aria-label="External Link" href="https://commons.wikimedia.org/wiki/File:Destruction_of_opium_in_1839.jpg">Commissioner Lin and the Destruction of the Opium in 1839.</a>” c.1840. <em>Wikimedia Commons</em>. Public domain.</p>
 					</section>
 
-					<section class="smaller" aria-labelledby="citation">
+					<section class="small" aria-labelledby="citation">
 						<h3 id="citation">Page/Lesson Plan Citation (MLA)</h3>
 						<p>Menglu Gao, lesson plan dev. “Psychoactive Revolution and Transnational Networks.” Waiyee Loh, Hyungji Park, Jessica R. Valdez, Rae X. Yan, collab. peer revs.; Sophia Hsu, cluster dev. <em>Undisciplining the Victorian Classroom</em>, 2022, <a href="/html/lesson_plans/east_asia_psychoactive_revolution.html" class="cite-link">https://undiscipliningvc.org/html/lesson_plans/east_asia_psychoactive_revolution.html</a>.</p>
 					</section>
