--- a/html/lesson_plans/east_asia_victorian_realism.html
+++ b/html/lesson_plans/east_asia_victorian_realism.html
@@ -359,7 +359,7 @@
 						<p>Lai Fong. “<a aria-label="External Link" href="http://hdl.handle.net/10020/2003r22b7">Part of the Bund, Shanghai</a>.” 1870s. The Getty Research Institute, Clark Worswick collection of photographs of China and Southeast Asia, 2003.R.22-b7.36r. Public domain. See The Getty Research Institutute's “<a aria-label="External Link" href="https://www.getty.edu/research/library/using/reproductions_permissions/index.html">Reproductions and Permissions</a>.”</p>
 					</section>
 
-					<section class="smaller" aria-labelledby="citation">
+					<section class="small" aria-labelledby="citation">
 						<h3 id="citation">Page/Lesson Plan Citation (MLA)</h3>
 						<p>Rae X. Yan, lesson plan dev. “Victorian Realism, China, and the Politics of Form.” Menglu Gao, Waiyee Loh, Hyungji Park, Jessica R. Valdez, collab. peer revs.; Sophia Hsu, cluster dev. <em>Undisciplining the Victorian Classroom</em>, 2022, <a href="/html/lesson_plans/east_asia_victorian_realism.html" class="cite-link">https://undiscipliningvc.org/html/lesson_plans/east_asia_victorian_realism.html</a>.</p>
 					</section>
