--- a/html/lesson_plans/east_asia_visualizing_korea.html
+++ b/html/lesson_plans/east_asia_visualizing_korea.html
@@ -344,7 +344,7 @@
 						<p>Lowell, Percival. “<a aria-label="External Link" href="https://collections.mfa.org/download/417819">His Majesty the King of Korea.</a>” 1884. MFA Boston, NRICP Relic No.: 2873. Fair use for non-commercial, educational purposes. See MFABoston <a aria-label="External Link" href="https://www.mfa.org/about/terms-of-use">Terms of Use</a>.</p>
 					</section>
 
-					<section class="smaller" aria-labelledby="citation">
+					<section class="small" aria-labelledby="citation">
 						<h3 id="citation">Page/Lesson Plan Citation (MLA)</h3>
 						<p>Hyungji Park, lesson plan dev. “Chinese Migration and Forms of Global Circulation.” Menglu Guo, Waiyee Loh, Jessica R. Valdez, Rae X. Yan, collab. peer revs.; Sophia Hsu, cluster dev. <em>Undisciplining the Victorian Classroom</em>, 2022, <a href="/html/lesson_plans/east_asia_visualizing_korea.html" class="cite-link">https://undiscipliningvc.org/html/lesson_plans/east_asia_visualizing_korea.html</a>.</p>
 					</section>
