--- a/html/syllabi/race_slavery_empire.html
+++ b/html/syllabi/race_slavery_empire.html
@@ -134,7 +134,7 @@
 						<p>(Right) Silvy, Camille. <a aria-label="External Link" href="https://www.npg.org.uk/collections/search/portrait/mw86361/Sarah-Forbes-Bonetta-Sarah-Davies?LinkID=mp63230&role=sit&rNo=1https://www.npg.org.uk/collections/search/portrait/mw86361/Sarah-Forbes-Bonetta-Sarah-Davies?LinkID=mp63230&role=sit&rNo=1">Sarah Forbes Bonetta (Sarah Davies)</a>. 15 Sept. 1862. National Portrait Gallery, Photographs Collection, NPG Ax61384. Copyright National Portrait Gallery. Academic license for academic and non-commercial use.</p>
 					</section>
 					
-					<section class="smaller" aria-labelledby="citation">
+					<section class="small" aria-labelledby="citation">
 						<h3 id="citation">Page/Syllabus Citation (MLA)</h3>
 						<p>Anna Feuerstein, dev. “Race, Trans-Atlantic Slavery, and the Empire.” Patricia A. Matthew, peer rev.; Ryan D. Fong, syllabus cluster dev. <em>Undisciplining the Victorian Classroom</em>, 2021, <a href="/html/syllabi/race_slavery_empire.html" class="cite-link">https://undiscipliningvc.org/html/syllabi/race_slavery_empire.html</a>.</p>
 					</section>
