--- a/html/zoomcasts/brice-hayward-reeder.html
+++ b/html/zoomcasts/brice-hayward-reeder.html
@@ -103,7 +103,7 @@
 					<p>Woods, David J. <em>Valparaiso Bound! European Pioneers on the Pacific Coast of South America</em>. Librería y Editorial Ricaaventura E.I.R.L., 2016.</p>
 				</summary>
 
-				<section class="smaller" aria-labelledby="citation">
+				<section class="small" aria-labelledby="citation">
 					<h3 id="citation">Page/Zoomcast Citation (MLA)</h3>
 					<p>“Zoomcast with Michelle Prain Brice, Jennifer Hayward, and Jessie Reeder.” Hosted by Ryan D. Fong. <em>Undisciplining the Victorian Classroom</em>, 2021, <a href="/html/zoomcasts/brice-hayward-reeder.html" class="cite-link">https://undiscipliningvc.org/html/zoomcasts/brice-hayward-reeder.html</a>.</p>
 				</section>
