--- a/html/zoomcasts/kim-cobblah.html
+++ b/html/zoomcasts/kim-cobblah.html
@@ -87,7 +87,7 @@
 						<p><strong>Anoff Nick Cobblah</strong> will soon be defending his dissertation in English at the University of Michigan, before he joins the University of Tennessee, Knoxville as a Faculty Consultant for Professional Development in April 2022. His research on nineteenth-century literature and science investigates the ways in which communities form through writing about scientific and technological concepts. He dissertation titled "The Work of Scientific Play in Nineteenth-Century Britain" explores how the community of Victorian professional scientists, increasingly developing an identity centered on science as “work,” nonetheless continued to value recreations as part of their scientific practice. He also works in educational and professional development. His work on preparing future faculty during the COVID-19 pandemic was published in a 2020 issue of <em>To Improve the Academy</em>.</p>
 					</section>
 
-					<section class="smaller" aria-labelledby="citation">
+					<section class="small" aria-labelledby="citation">
 						<h3 id="citation">Page/Zoomcast Citation (MLA)</h3>
 						<p>“Zoomcast with Haejoo Kim and Anoff Nick Cobblah.” Hosted by Ryan D. Fong. <em>Undisciplining the Victorian Classroom</em>, 2022, <a href="/html/zoomcasts/kim-cobblah.html" class="cite-link">https://undiscipliningvc.org/html/zoomcasts/kim-cobblah.html</a>.</p>
 					</section>
