--- a/index.html
+++ b/index.html
@@ -146,12 +146,12 @@
 					</div>
 				</aside>
 
-				<section class="smaller" aria-labelledby="site-code">
+				<section class="small" aria-labelledby="site-code">
 					<h2 id="site-code">Site Code</h2>
 					<p>The code for this site is adapted from the <a aria-label="External Link" href="https://onemorevoice.org/">One More Voice</a> project site, is released under a <a aria-label="External Link" href="https://creativecommons.org/licenses/by-nc/4.0/">Creative Commons Attribution-NonCommercial 4.0 International</a> (CC BY-NC 4.0) license, and may be reused for educational and other non-commercial purposes as long as proper attribution is given. The development of the site has involved considerable thought, intentionality, and consensus building. The site has a small footprint to support low-bandwidth environments, is fully responsive for all kinds of mobile devices, and incorporates several features (including semantic HTML and ARIA attributes) to make it more accessible for people with disabilities. The site’s minimalist aesthetic cuts down on visual clutter and supports a stress-free and navigationally-clear experience for all audiences. Visit our <a aria-label="External Link" href="https://github.com/undiscipliningvc">GitHub Repo</a>.</p>
 				</section>
 
-				<section class="smaller" aria-labelledby="image-details">
+				<section class="small" aria-labelledby="image-details">
 					<h2 id="image-details">Carousel Image Details</h2>
 
 						<!-- <h3>Slideshow</h3> -->
@@ -164,7 +164,7 @@
 						<p id="fante"><em>Slide #4</em>: Anonymous Fante Artist. <a aria-label="External Link" href="https://africa.si.edu/collections/objects/8622/asafo-flag?ctx=b6e777daaaa95af79cf9d1b5e407048a470c2f95&idx=8">Asafo Flag</a>, c.1910. Smithsonian Institution. National Museum of African Art, Textile and Fiber Arts, 88-9-1. Used for educational use consistent with the principles of fair use under Section 108 of the U.S. Copyright Act.</p>
 				</section>
 
-				<section class="smaller" aria-labelledby="citation">
+				<section class="small" aria-labelledby="citation">
 					<h2 id="citation">Project/Page Citation (MLA)</h2>
 					<p>Pearl Chaozon Bauer, Ryan D. Fong, Sophia Hsu, and Adrian S. Wisnicki, founding dev. <em>Undisciplining the Victorian Classroom</em>, 2021, <a href="/" class="cite-link">https://undiscipliningvc.org</a>.</p>
 				</section>
