--- a/0_dev/page-templates/0_lesson-plan-template-east-asia.html
+++ b/0_dev/page-templates/0_lesson-plan-template-east-asia.html
@@ -125,7 +125,7 @@
 
 					</section>
 
-					<section class="smaller" aria-labelledby="citation">
+					<section class="small" aria-labelledby="citation">
 						<h3 id="citation">Page/Lesson Plan Citation (MLA)</h3>
 						<p>, lesson plan dev. “.” Menglu Gao, Waiyee Loh, Hyungji Park, Jessica R. Valdez, Rae X. Yan, collab. peer revs.; Sophia Hsu, cluster dev. <em>Undisciplining the Victorian Classroom</em>, 2022, <a href="/html/lesson_plans/.html" class="cite-link">https://undiscipliningvc.org/html/lesson_plans/.html</a>.</p><!-- Change -->
 					</section>
