--- a/0_dev/page-templates/0_zoomcast-template.html
+++ b/0_dev/page-templates/0_zoomcast-template.html
@@ -91,7 +91,7 @@
 						
 					</summary>
 
-					<section class="smaller" aria-labelledby="citation">
+					<section class="small" aria-labelledby="citation">
 						<h3 id="citation">Page/Zoomcast Citation (MLA)</h3>
 						<p>“Zoomcast with .” Hosted by . <em>Undisciplining the Victorian Classroom</em>, 2021, <a href="/html/zoomcasts/.html" class="cite-link">https://undiscipliningvc.org/html/zoomcasts/.html</a>.</p><!-- Change -->
 					</section>
