--- a/html/about/bibliography.html
+++ b/html/about/bibliography.html
@@ -690,7 +690,7 @@
 						<p>Owen Jones. “Byzantine No. 3.” <em><a aria-label="External Link" href="https://archive.org/details/grammarornament00Jone">The Grammar of Ornament</a></em>, Day and Son, Lithographers to the Queen, 1856, Plate XXX. Public domain. The founding developers of <em>Undisciplining the Victorian Classroom</em> have selected this image and the others that illustrate the pages of the About section because the images convey two dynamics.  First, the images show the ways that the British in the Victorian period were engaged in the process of collecting and taxonomizing materials from other parts of the world. Second, the images themselves also illustrate how the graphic designs from these non-British and, often, non-Western cultures stand as striking aesthetic achievements in their own right.</p>
 					</section>
 					
-					<section class="smaller" aria-labelledby="citation">
+					<section class="small" aria-labelledby="citation">
 						<h3 id="citation">Page Citation (MLA)</h3>
 						<p>“Bibliography.” <em>Undisciplining the Victorian Classroom</em>, 2021, <a href="/html/about/bibliography.html" class="cite-link">https://undiscipliningvc.org/html/about/bibliography.html</a>.</p>
 					</section>
