--- a/html/about/call_for_assessments_2022.html
+++ b/html/about/call_for_assessments_2022.html
@@ -74,7 +74,7 @@
           </section>
 
           					
-					<section class="smaller" aria-labelledby="citation">
+					<section class="small" aria-labelledby="citation">
 						<h3 id="citation">Page Citation (MLA)</h3>
 						<p>“Call for Assessments.” <em>Undisciplining the Victorian Classroom</em>, 2022, <a href="/html/about/call_for_assessments_2022.html" class="cite-link">https://undiscipliningvc.org/html/about/call_for_assessments_2022.html</a>.</p>
 					</section>
