--- a/html/lesson_plans/africa_archival_erasure.html
+++ b/html/lesson_plans/africa_archival_erasure.html
@@ -184,7 +184,7 @@
 						<p>Joseph Mallord William Turner. <a aria-label="External Link" href="https://collections.mfa.org/objects/31102"><em>Slave Ship (Slavers Throwing Overboard the Dead and Dying, Typhoon Coming On)</em></a>. 1840. The Beal Gallery (Gallery 251), 99.22. Public domain.</p>
 					</section>
 
-					<section class="smaller" aria-labelledby="citation">
+					<section class="small" aria-labelledby="citation">
 						<h3 id="citation">Page/Lesson Plan Citation (MLA)</h3>
 						<p>Sophia Hsu, lesson plan dev. “Archival Erasure and the Aftermath of Slavery.” Carolyn Betensky, Melissa Free, Cherrie Kwok, Ji Eun Lee, collab. peer revs.; Sophia Hsu, lesson plan cluster dev. <em>Undisciplining the Victorian Classroom</em>, 2021, <a href="/html/lesson_plans/africa_archival_erasure.html" class="cite-link">https://undiscipliningvc.org/html/lesson_plans/africa_archival_erasure.html</a>.</p>
 					</section>
