--- a/html/lesson_plans/africa_dramatic_monologue.html
+++ b/html/lesson_plans/africa_dramatic_monologue.html
@@ -319,7 +319,7 @@
 						<p>Henry Ossawa Tanner. <a aria-label="External Link" href="https://collections.si.edu/search/detail/edanmdm:saam_1983.95.28?q=record_ID%3Dsaam_1983.95.28&record=1&hlterm=record_ID%3Dsaam_1983.95.28&inline=true"><em>Crossing the Atlantic (Return Home)</em></a>. 1894. The Smithsonian Institution. Used for education consistent with the principles of fair use under Section 108 of the U.S. Copyright Act.</p>
 					</section>
 
-					<section class="smaller" aria-labelledby="citation">
+					<section class="small" aria-labelledby="citation">
 						<h3 id="citation">Page/Lesson Plan Citation (MLA)</h3>
 						<p>Cherrie Kwok, lesson plan dev. “Undisciplining the Dramatic Monologue.” Carolyn Betensky, Melissa Free, Ji Eun Lee, collab. peer revs.; Sophia Hsu, lesson plan cluster dev. <em>Undisciplining the Victorian Classroom</em>, 2021, <a href="/html/lesson_plans/africa_dramatic_monologue.html" class="cite-link">https://undiscipliningvc.org/html/lesson_plans/africa_dramatic_monologue.html</a>.</p>
 					</section>
