--- a/html/lesson_plans/africa_ethiopianism.html
+++ b/html/lesson_plans/africa_ethiopianism.html
@@ -141,7 +141,7 @@
 						<p><a aria-label="External Link" href="https://www.loc.gov/pictures/item/93505644/">Baptism by John Chilembwe in Liberia or Malawi</a>. c.1900-15. Library of Congress Prints and Photographs Division, LOT 12573 &lt;item&gt; [P&P]. No known restrictions on publication.</p>
 					</section>
 
-					<section class="smaller" aria-labelledby="citation">
+					<section class="small" aria-labelledby="citation">
 						<h3 id="citation">Page/Lesson Plan Citation (MLA)</h3>
 						<p>Melissa Free, lesson plan dev. “Ethiopianism.” Carolyn Betensky, Cherrie Kwok, Ji Eun Lee, collab. peer revs.; Sophia Hsu, lesson plan cluster dev. <em>Undisciplining the Victorian Classroom</em>, 2021, <a href="/html/lesson_plans/africa_ethiopianism.html" class="cite-link">https://undiscipliningvc.org/html/lesson_plans/africa_ethiopianism.html</a>.</p>
 					</section>
