--- a/html/lesson_plans/africa_slavery_theories.html
+++ b/html/lesson_plans/africa_slavery_theories.html
@@ -158,7 +158,7 @@
 						<p>“<a aria-label="External Link" href="https://babel.hathitrust.org/cgi/pt?id=uc2.ark:/13960/t4kk94s0d&view=1up&seq=6">The Death of Clotelle</a>.” <em>Clotelle; or, The Colored Heroine: A Tale of the Southern States</em>, by William Wells Brown, Lee & Shepard, 1867, frontispiece. Public domain.</p>
 					</section>
 
-					<section class="smaller" aria-labelledby="citation">
+					<section class="small" aria-labelledby="citation">
 						<h3 id="citation">Page/Lesson Plan Citation (MLA)</h3>
 						<p>Carolyn Betensky, lesson plan dev. “Slavery and Theories of Sexuality, Desire, and the Family.” Melissa Free, Cherrie Kwok, Ji Eun Lee, collab. peer revs.; Sophia Hsu, lesson plan cluster dev. <em>Undisciplining the Victorian Classroom</em>, 2021, <a href="/html/lesson_plans/africa_slavery_theories.html" class="cite-link">https://undiscipliningvc.org/html/lesson_plans/africa_slavery_theories.html</a>.</p>
 					</section>
