--- a/html/lesson_plans/east_asia_chinese_migration.html
+++ b/html/lesson_plans/east_asia_chinese_migration.html
@@ -373,7 +373,7 @@
 						<p>Anonymous. “<a aria-label="External Link" href="https://commons.wikimedia.org/wiki/File:Hong_Kong_and_Victoria_Peak_Circa_1855.jpg">Hong Kong and Victoria Peak Circa 1855.</a>” c.1855. <em>Wikimedia Commons</em>. Public domain.</p>
 					</section>
 
-					<section class="smaller" aria-labelledby="citation">
+					<section class="small" aria-labelledby="citation">
 						<h3 id="citation">Page/Lesson Plan Citation (MLA)</h3>
 						<p>Jessica R. Valdez, lesson plan dev. “Chinese Migration and Forms of Global Circulation.” Menglu Guo, Waiyee Loh, Hyungji Park, Rae X. Yan, collab. peer revs.; Sophia Hsu, cluster dev. <em>Undisciplining the Victorian Classroom</em>, 2022, <a href="/html/lesson_plans/east_asia_chinese_migration.html" class="cite-link">https://undiscipliningvc.org/html/lesson_plans/east_asia_chinese_migration.html</a>.</p>
 					</section>
