--- a/html/lesson_plans/east_asia_japanese_aesthetics.html
+++ b/html/lesson_plans/east_asia_japanese_aesthetics.html
@@ -565,7 +565,7 @@
 						<p>Whistler, James McNeill. “<a aria-label="External Link" href="https://asia.si.edu/object/F1904.75a/">Caprice in Purple and Gold: The Golden Screen</a>.” 1864. Smithsonian National Museum of Asian Art, F1904.75a. Creative Commons (CC0 1.0). <a aria-label="External Link" href="https://www.si.edu/termsofuse">Smithsonian Terms of Use</a>.</p>
 					</section>
 
-					<section class="smaller" aria-labelledby="citation">
+					<section class="small" aria-labelledby="citation">
 						<h3 id="citation">Page/Lesson Plan Citation (MLA)</h3>
 						<p>Waiyee Loh, lesson plan dev. “Japanese Aesthetics: British Perceptions and Japanese Responses.” Menglu Guo, Hyungji Park, Jessica R. Valdez, Rae X. Yan, collab. peer revs.; Sophia Hsu, cluster dev. <em>Undisciplining the Victorian Classroom</em>, 2022, <a href="/html/lesson_plans/east_asia_japanese_aesthetics.html" class="cite-link">https://undiscipliningvc.org/html/lesson_plans/east_asia_japanese_aesthetics.html</a>.</p>
 					</section>
