--- a/html/lesson_plans/east_asia_timeline.html
+++ b/html/lesson_plans/east_asia_timeline.html
@@ -473,7 +473,7 @@
             <p>Kim Sahyung, et al. <a aria-label="External Link" href="https://commons.wikimedia.org/wiki/File:GeneralMapOfDistancesAndHistoricCapitals.jpg"><em>Kangnido</em></a>. 1402. <em>Wikimedia Commons</em>, <em>Dschingis Khan und seine Erben</em> (exhibition catalogue), München 2005, p. 336–37. </p>
 					</section>
 
-					<section class="smaller" aria-labelledby="citation">
+					<section class="small" aria-labelledby="citation">
 						<h3 id="citation">Page Citation (MLA)</h3>
 						<p>Sophia Hsu, Menglu Gao, Waiyee Loh, Hyungji Park, Jessica R. Valdez, Adrian S. Wisnicki, and Rae X. Yan. “Transimperial Networks and East Asia: Timeline”  <em>Undisciplining the Victorian Classroom</em>, 2022, <a href=" https://undiscipliningvc.org/html/lesson_plans/east_asia_timeline.html" class="cite-link"> https://undiscipliningvc.org/html/lesson_plans/east_asia_timeline.html</a>.</p>
 					</section>
