--- a/html/lesson_plans/east_asia_transimperial_introduction.html
+++ b/html/lesson_plans/east_asia_transimperial_introduction.html
@@ -120,7 +120,7 @@
 						<p>Anonymous. “Korean Cheonhado Map.” Seventeenth-eighteeenth century. Ricci Institute for Chinese-Western Cultural History, Boston College. Courtesy of the Ricci Institute for Chinese-Western Cultural History, Boston College.</p>
 					</section>
 
-					<section class="smaller" aria-labelledby="citation">
+					<section class="small" aria-labelledby="citation">
 						<h3 id="citation">Page Citation (MLA)</h3>
 						<p>Sophia Hsu, Menglu Gao, Waiyee Loh, Hyungji Park, Jessica R. Valdez, and Rae X. Yan. “Transimperial Networks: East Asia and the ‘Victorian’ World: Introduction.”  <em>Undisciplining the Victorian Classroom</em>, 2022, <a href="/html/lesson_plans/east_asia_transimperial_introduction.html" class="cite-link">https://undiscipliningvc.org/html/lesson_plans/east_asia_transimperial_introduction.html</a>.</p>
 					</section>
