--- a/html/lesson_plans/seacole_caribbean_introduction.html
+++ b/html/lesson_plans/seacole_caribbean_introduction.html
@@ -102,7 +102,7 @@
 						<p><a aria-label="External Link" href="https://monovisions.com/vintage-everyday-life-in-jamaica-1890s/">Kingston from Harbor</a>. 1891. MonoVisions Black & White Photography Magazine. Public domain.</p>
 					</section>
 
-					<section class="smaller" aria-labelledby="citation">
+					<section class="small" aria-labelledby="citation">
 						<h3 id="citation">Page Citation (MLA)</h3>
 						<p>Adrian S. Wisnicki, Kira Braham, Heidi Kaufman, Indu Ohri, and Breanna Simpson. “Mary Seacole and the Caribbean.”  <em>Undisciplining the Victorian Classroom</em>, 2021, <a href="/html/lesson_plans/seacole_caribbean_introduction.html" class="cite-link">https://undiscipliningvc.org/html/lesson_plans/seacole_caribbean_introduction.html</a>.</p>
 					</section>
