--- a/html/lesson_plans/seacole_decentering_britishness.html
+++ b/html/lesson_plans/seacole_decentering_britishness.html
@@ -91,7 +91,7 @@
           <section aria-labelledby="outcomes">
 						<h3 id="outcomes">Learning Outcomes</h3>
 
-						<p>This lesson plan is designed to foreground conversations about Seacole’s complex positioning as a colonial subject of color and to encourage critical discourse about “Britishness” (or “Englishness”) as an identity category. In highlighting how the realities of global empire and its afterlives foreclose the possibility of defining Britishness as a stable national identity, this lesson plan takes a transimperial and strategically presentist approach to teaching <em>Wonderful Adventures of Mrs. Seacole in Many Lands</em>. Students will be encouraged to consider how Seacole’s Jamaican, colonial, and racial identities shaped her experiences as an entrepreneur, nurse, and war heroine and her account of those experiences in <em>Wonderful Adventures</em> as well as how those identities also shape readings of Seacole and her text in the twenty-first century. The pathways offer suggestions for how this lesson plan might be organized into smaller units, but the suggested materials can be read in any configuration.</p>
+						<p>This lesson plan is designed to foreground conversations about Seacole’s complex positioning as a colonial subject of color and to encourage critical discourse about “Britishness” (or “Englishness”) as an identity category. In highlighting how the realities of global empire and its afterlives foreclose the possibility of defining Britishness as a stable national identity, this lesson plan takes a transimperial and strategically presentist approach to teaching <em>Wonderful Adventures of Mrs. Seacole in Many Lands</em>. Students will be encouraged to consider how Seacole’s Jamaican, colonial, and racial identities shaped her experiences as an entrepreneur, nurse, and war heroine and her account of those experiences in <em>Wonderful Adventures</em> as well as how those identities also shape readings of Seacole and her text in the twenty-first century. The pathways offer suggestions for how this lesson plan might be organized into small units, but the suggested materials can be read in any configuration.</p>
 					</section>
 
           <section class="pathways" aria-labelledby="pathways">
@@ -207,7 +207,7 @@
 						<p><a aria-label="External Link" href="https://monovisions.com/vintage-everyday-life-in-jamaica-1890s/">Jubilee Market, Kingston, Jamaica</a>. c.1890s. MonoVisions Black & White Photography Magazine. Public domain.</p>
 					</section>
 
-					<section class="smaller" aria-labelledby="citation">
+					<section class="small" aria-labelledby="citation">
 						<h3 id="citation">Page/Lesson Plan Citation (MLA)</h3>
 						<p>Kira Braham, lesson plan dev. “Decentering Britishness.” Heidi Kaufman, Indu Ohri, Breanna Simpson, collab. peer revs.; Adrian S. Wisnicki, lesson plan cluster dev. <em>Undisciplining the Victorian Classroom</em>, 2021, <a href="/html/lesson_plans/seacole_decentering_britishness.html" class="cite-link">https://undiscipliningvc.org/html/lesson_plans/seacole_decentering_britishness.html</a>.</p>
 					</section>
