--- a/html/syllabi/black_(im)mobilities.html
+++ b/html/syllabi/black_(im)mobilities.html
@@ -124,7 +124,7 @@
 						<p>Kaufmann, Theodor. “<a aria-label="External Link" href="https://www.metmuseum.org/art/collection/search/11287">On to Liberty</a>.” 1867. The Met, 1982.443.3. Public domain. Gift of Erving and Joyce Wolf, in memory of Diane R. Wolf, 1982.</p>
 					</section>
 					
-					<section class="smaller" aria-labelledby="citation">
+					<section class="small" aria-labelledby="citation">
 						<h3 id="citation">Page/Syllabus Citation (MLA)</h3>
 						<p>Meg Dobbins, dev. “Black (Im)mobilities.” Patricia A. Matthew, peer rev.; Ryan D. Fong, syllabus cluster dev. <em>Undisciplining the Victorian Classroom</em>, 2021, <a href="/html/syllabi/black_(im)mobilities.html" class="cite-link">https://undiscipliningvc.org/html/syllabi/black_(im)mobilities.html</a>.</p>
 					</section>
