--- a/html/syllabi/canon_fodder.html
+++ b/html/syllabi/canon_fodder.html
@@ -126,7 +126,7 @@
 						<p>jarmoluk. [<a aria-label="External Link" href="https://pixabay.com/photos/library-books-bookcases-bookshelves-488690/">Untitled Photograph</a>]. 15 Oct. 2014. Pixabay. <a aria-label="External Link" href="https://pixabay.com/service/license/">Pixabay License</a>.</p>
 					</section>
 					
-					<section class="smaller" aria-labelledby="citation">
+					<section class="small" aria-labelledby="citation">
 						<h3 id="citation">Page/Syllabus Citation (MLA)</h3>
 						<p>Jacob Romanow, dev. “Canon Fodder: What Should We Read?” Rachel Sagner Buurma, peer rev.; Sophia Hsu, syllabus cluster dev. <em>Undisciplining the Victorian Classroom</em>, 2022, <a href="/html/syllabi/canon_fodder.html" class="cite-link">https://undiscipliningvc.org/html/syllabi/canon_fodder.html</a>.</p>
 					</section>
