--- a/html/syllabi/capital-l_literature.html
+++ b/html/syllabi/capital-l_literature.html
@@ -148,7 +148,7 @@
 						<p>(Right) Blake, William. “<a aria-label="External Link" href="http://www.blakearchive.org/copy/but543.1?descId=but543.1.wc.12">Milton in His Old Age</a>.” c.1816-20 (composed). <em>The William Blake Archive</em>, <em>Illustrations to Milton’s</em> “L’Allegro” and “Il Penseroso,” Copy 1, Object 12 (Butlin 543.12). Fair use.</p>
 					</section>
 					
-					<section class="smaller" aria-labelledby="citation">
+					<section class="small" aria-labelledby="citation">
 						<h3 id="citation">Page/Syllabus Citation (MLA)</h3>
 						<p>Lindsey N. Chappell, dev. “Capital L-Literature: Intro to Grad Studies.” Rachel Sagner Buurma, peer rev.; Sophia Hsu, syllabus cluster dev. <em>Undisciplining the Victorian Classroom</em>, 2022, <a href="/html/syllabi/capital-l_literature.html" class="cite-link">https://undiscipliningvc.org/html/syllabi/capital-l_literature.html</a>.</p>
 					</section>
