--- a/html/syllabi/uvc_india_jude.html
+++ b/html/syllabi/uvc_india_jude.html
@@ -128,7 +128,7 @@
 						<p>Ghosh, Gourav. <a aria-label="External Link" href="https://commons.wikimedia.org/wiki/File:Jadavpur_University_Gate_No._4.jpg">The Entry to the Arts Faculty of Jadavpur University</a>. 3 Dec. 2011. Wikimedia Commons. <a aria-label="External Link" href="https://creativecommons.org/licenses/by-sa/3.0">CC BY-SA 3.0</a>.</p>
 					</section>
 					
-					<section class="smaller" aria-labelledby="citation">
+					<section class="small" aria-labelledby="citation">
 						<h3 id="citation">Page/Syllabus Citation (MLA)</h3>
 						<p>Shantanu Majee, dev. “UVC in India: Case Study of JUDE.” Rachel Sagner Buurma, peer rev.; Sophia Hsu, syllabus cluster dev. <em>Undisciplining the Victorian Classroom</em>, 2022, <a href="/html/syllabi/uvc_india_jude.html" class="cite-link">https://undiscipliningvc.org/html/syllabi/uvc_india_jude.html</a>.</p>
 					</section>
