--- a/html/syllabi/victorian_human.html
+++ b/html/syllabi/victorian_human.html
@@ -122,7 +122,7 @@
 						<p>Hawkins, Benjamin Waterhouse. “<a aria-label="External Link" href="https://archive.org/details/evidenceastomans63thom">Skeletons of the Gibbon. Orang. Chimpanzee. Gorilla. Man.</a>” <em>Evidence as to Man’s Place in Nature</em>, by Thomas Henry Huxley, Williams and Norgate, 1863, frontispiece. Public domain.</p>
 					</section>
 					
-					<section class="smaller" aria-labelledby="citation">
+					<section class="small" aria-labelledby="citation">
 						<h3 id="citation">Page/Syllabus Citation (MLA)</h3>
 						<p>Ava Bindas, dev. “The Victorian and the Human.” Patricia A. Matthew, peer rev.; Ryan D. Fong, syllabus cluster dev. <em>Undisciplining the Victorian Classroom</em>, 2021, <a href="/html/syllabi/victorian_human.html" class="cite-link">https://undiscipliningvc.org/html/syllabi/victorian_human.html</a>.</p>
 					</section>
