--- a/html/syllabi/victorian_women_world.html
+++ b/html/syllabi/victorian_women_world.html
@@ -131,7 +131,7 @@
 						<p>(Right) Rocher, Henry. <a aria-label="External Link" href="https://commons.wikimedia.org/wiki/File:Motto_edmonia_lewis_original.jpg">Edmonia Lewis</a>. c.1870. <em>Wikimedia Commons</em>. Public domain.</p>
 					</section>
 					
-					<section class="smaller" aria-labelledby="citation">
+					<section class="small" aria-labelledby="citation">
 						<h3 id="citation">Page/Syllabus Citation (MLA)</h3>
 						<p>Jesse Cordes Selbin, dev. “Victorian Women of the World.” Ronjaunee Chatterjee, peer rev.; Pearl Chaozon Bauer, syllabus cluster dev.  <em>Undisciplining the Victorian Classroom</em>, 2021, <a href="/html/syllabi/victorian_women_world.html" class="cite-link">https://undiscipliningvc.org/html/syllabi/victorian_women_world.html</a>.</p>
 					</section>
