--- a/html/syllabi/women_write_empire.html
+++ b/html/syllabi/women_write_empire.html
@@ -135,7 +135,7 @@
 						<p>(Right) Gutekunst, Frederick. “<a aria-label="External Link" href="https://archive.org/details/highcastehinduwo00ramaiala/page/n5/mode/2up">Pandita Ramabai Sarasvati</a>.” <em>The High-Caste Hindu Woman</em>, by Pandita Ramabai Sarasvati, Press of The Jas B. Rodgers Printing Co., 1887, frontispiece.</p>		
 					</section>
 					
-					<section class="smaller" aria-labelledby="citation">
+					<section class="small" aria-labelledby="citation">
 						<h3 id="citation">Page/Syllabus Citation (MLA)</h3>
 						<p>Amy Kahrmann Huseby, dev. “Nineteenth-Century Women Write the Empire.” Ronjaunee Chatterjee, peer rev.; Pearl Chaozon Bauer, syllabus cluster dev. <em>Undisciplining the Victorian Classroom</em>, 2021, <a href="/html/syllabi/women_write_empire.html" class="cite-link">https://undiscipliningvc.org/html/syllabi/women_write_empire.html</a>.</p>
 					</section>
