--- a/html/zoomcasts/braham-ohri-simpson.html
+++ b/html/zoomcasts/braham-ohri-simpson.html
@@ -95,7 +95,7 @@
 						<p><strong>Breanna Simpson</strong> is a doctoral candidate and teaching assistant in the Department of English at York University in Toronto. Her research focuses on gender studies and queer theory, classical reception, world literature, and late Victorian fiction. Her dissertation, <em>In Pursuit of Cupid’s Daughter: The Construction and Control of Desire in Ancient and Victorian Narratives</em>, interrogates the concept of desire by examining forms and practices of reception, power, subjectivity, and identity.</p>
 					</section>
 
-					<section class="smaller" aria-labelledby="citation">
+					<section class="small" aria-labelledby="citation">
 						<h3 id="citation">Page/Zoomcast Citation (MLA)</h3>
 						<p>“Zoomcast with Kira Braham, Indu Ohri, and Bre Simpson.” Hosted by Adrian S. Wisnicki. <em>Undisciplining the Victorian Classroom</em>, 2021, <a href="/html/zoomcasts/braham-ohri-simpson.html" class="cite-link">https://undiscipliningvc.org/html/zoomcasts/braham-ohri-simpson.html</a>.</p>
 					</section>
