--- a/html/zoomcasts/servitje.html
+++ b/html/zoomcasts/servitje.html
@@ -85,7 +85,7 @@
 						<p>Lorenzo Servitje is Associate Professor of Literature and Medicine, with a dual appointment in the Department of English and the Health, Medicine, and Society program at Lehigh University. He holds a PhD in English from the University of California, Riverside and is currently completing a Master of Public Health at Dartmouth’s Geisel School of Medicine. His monograph <a aria-label="External Link" href="https://sunypress.edu/Books/M/Medicine-Is-War"><em>Medicine Is War: The Martial Metaphor in Victorian Literature and Culture</em></a> (SUNY UP, 2021) traces the metaphorical militarization of medicine in the nineteenth century. His current book project, <em>The Science and Fiction of Antibiosis</em> examines the history and culture of antibiotics and antibiotic resistance. He serves on the editorial board of the <em>Journal of Medical Humanities</em> and as an associate editor for <em>Literature and Medicine</em>. He is co-lead editor of the “<a aria-label="External Link" href="https://lupress.cas.lehigh.edu/content/studies-health-humanities">Studies in Health Humanities</a>” book series from Lehigh University Press.</p>						
 					</section>
 
-					<section class="smaller" aria-labelledby="citation">
+					<section class="small" aria-labelledby="citation">
 						<h3 id="citation">Page/Zoomcast Citation (MLA)</h3>
 						<p>“Zoomcast with Lorenzo Servitje.” Hosted by Ryan D. Fong. <em>Undisciplining the Victorian Classroom</em>, 2022, <a href="/html/zoomcasts/servitje.html" class="cite-link">https://undiscipliningvc.org/html/zoomcasts/servitje.html</a>.</p>
 					</section>
