--- a/html/zoomcasts/walters.html
+++ b/html/zoomcasts/walters.html
@@ -85,7 +85,7 @@
 						<p>Alisha R. Walters is an Assistant Professor of Victorian Literature and Culture at Penn State University, Abington College. Her work examines representations of race and racial mixture in the nineteenth century, and her research focuses on the tensions between scientific and affective ideas of race, particularly in depictions of people of color in Victorian fiction. She also writes about colonial and literary depictions of food, as she considers what Victorians wrote about food and the dynamic process of national identity formation. Her work has appeared in journals such as <em>Victorian Literature and Culture</em>, <em>Nineteenth-Century Gender Studies</em>, and <em>Women’s Writing</em>.</p>
 					</section>
 
-					<section class="smaller" aria-labelledby="citation">
+					<section class="small" aria-labelledby="citation">
 						<h3 id="citation">Page/Zoomcast Citation (MLA)</h3>
 						<p>“Zoomcast with Alisha Walters.” Hosted by Pearl Chaozon Bauer. <em>Undisciplining the Victorian Classroom</em>, 2021, <a href="/html/zoomcasts/walters.html" class="cite-link">https://undiscipliningvc.org/html/zoomcasts/walters.html</a>.</p>
 					</section>
