u generic syllabus template

--- a/0_dev/python-files/main/0_syllabus-template-1.html
+++ b/0_dev/python-files/main/0_syllabus-template-1.html
@@ -104,6 +104,7 @@
 					<section aria-labelledby="caption">
 						<h3 id="caption">Header Image Caption</h3>
 
+						<p>{header-image-caption}</p>
 					</section>
 					
 					<section class="small" aria-labelledby="citation">
