--- a/0_dev/python-files/0_syllabus-template-3.html
+++ b/0_dev/python-files/0_syllabus-template-3.html
@@ -105,6 +105,7 @@
 					<section aria-labelledby="caption">
 						<h3 id="caption">Header Image Caption</h3>
 
+						<p>{header-image-caption}</p>
 					</section>
 					
 					<section class="small" aria-labelledby="citation">
