--- a/html/zoomcasts/braham-ohri-simpson.html
+++ b/html/zoomcasts/braham-ohri-simpson.html
@@ -71,11 +71,11 @@
             </ol>
           </section>
 
-					<summary aria-labelledby="overview">
+					<section aria-labelledby="overview">
 						<h3 id="overview">Zoomcast Overview</h3>
 
 						<p>Adrian S. Wisnicki speaks with Kira Braham, Indu Ohri, and Bre Simpson, three scholars whose work he helped facilitate in developing a series of lesson plans on Mary Seacole, now published by <em>Undisciplining the Victorian Classroom</em>. The discussion begins by exploring how each of these scholars became involved in the lesson plan initiative, then turns to the content of the lesson plans themselves. As part of the discussion, the participants reflect on their development of the lesson plans through an iterative process, why they chose to focus on Mary Seacole in the first place, and the overall collegiality of the collaboration. The discussion closes with a review of some of the lessons they learned through the collaboration process, with the goal of sharing insights and observations that might be useful to other scholars looking to work together on the <em>Undisciplining the Victorian Classroom</em> project or in other contexts. The Zoomcast also includes a supplemental statement from Heidi Kaufman, a scholar who worked as part of the&nbsp; group on the Seacole lesson plans, but whose schedule prevented her from appearing in the Zoomcast.</p>
-					</summary>
+					</section>
 					
 					<section aria-labelledby="series">
 						<h3 id="series">Collaboration Series</h3>
