--- a/html/zoomcasts/brice-hayward-reeder.html
+++ b/html/zoomcasts/brice-hayward-reeder.html
@@ -71,12 +71,12 @@
 					</ol>
 				</section>
 
-				<summary aria-labelledby="overview">
+				<section aria-labelledby="overview">
 					<h3 id="overview">Zoomcast Overview</h3>
 					<p>Ryan D. Fong speaks with Michelle Prain Brice, Jennifer Hayward, and Jessie Reeder, the three creators of <a aria-label="External Link" href="http://anglophonechile.org/">Anglophone Chile</a>. They discuss not only what it means to bring Chile, specifically, and Latin America, more generally, into their purview as Victorianists, but also talk about how print culture forms a crucial archive for understanding these places and their role in Britain’s “informal empire.”  Brice, Hayward, and Reeder also share the work they have done in digitizing newspapers and periodicals for their website as well as in writing the short essays provided to help instructors place these print materials in appropriate contexts.</p>
-				</summary>
+				</section>
 
-				<summary aria-labelledby="reading">
+				<section aria-labelledby="reading">
 					<h3 id="reading">Further Reading</h3>
 				
 					<p>Aguirre, Robert D. <em>Informal Empire: Mexico and Central America in Victorian Culture</em>. University of Minnesota Press, 2004.</p>
@@ -86,7 +86,7 @@
 					<p>Graham, Maria. <em>Journal of a Residence in Chile During the Year 1822, and a Voyage from Chile to Brazil in 1823</em>. Edited by Jennifer Hayward, University of Virginia Press, 2003.</p>
 
 					<p>Woods, David J. <em>Valparaiso Bound! European Pioneers on the Pacific Coast of South America</em>. Librería y Editorial Ricaaventura E.I.R.L., 2016.</p>
-				</summary>
+				</section>
 
 				<section aria-labelledby="series">
 					<h3 id="series">Beyond the Literary Series</h3>
