--- a/html/zoomcasts/kim-cobblah.html
+++ b/html/zoomcasts/kim-cobblah.html
@@ -70,10 +70,10 @@
             </ol>
           </section>
 
-					<summary aria-labelledby="overview">
+					<section aria-labelledby="overview">
 						<h3 id="overview">Zoomcast Overview</h3>
 						<p>Ryan D. Fong interviews Haejoo Kim and Anoff Nick Cobblah, two junior scholars who recently finished dissertations on Victorian science, medicine, and technology. In their conversation, they discuss how each of them came to study nineteenth-century discourses about science and technology and how they have engaged archival materials that fall outside the typical categories of the “literary.” They focus on the particular role that periodical writing played in shaping these discourses and their circulation in global contexts. By showing how these sources generated scientific knowledge and, importantly, knowledge about race and the racialized body, Kim and Cobblah show how these materials provide rich fodder for classroom discussion, especially with students coming from the sciences. They also talk about the insights that these discussions can give students about the intersections of race, science, and technology in our contemporary context.</p>
-					</summary>
+					</section>
 					
 					<section aria-labelledby="series">
 						<h3 id="series">Beyond the Literary Series</h3>
