--- a/html/zoomcasts/servitje.html
+++ b/html/zoomcasts/servitje.html
@@ -70,10 +70,10 @@
             </ol>
           </section>
 
-					<summary aria-labelledby="overview">
+					<section aria-labelledby="overview">
 						<h3 id="overview">Zoomcast Overview</h3>
 						<p>This Zoomcast continues the series on positionality in a field that desperately needs undisciplining and in a historical moment that requires undisciplined approaches to teaching and research. Ryan D. Fong interviews Lorenzo Servitje, Associate Professor of Literature and Medicine at Lehigh University.&nbsp; Their conversation focuses Servitje’s entry into the field and his deep commitment to interdisciplinary scholarship, particularly within the medical humanities. Servitje not only discusses his recent book, but his decision to earn a second graduate degree, a Master of Public Health, to enhance his teaching and research. They talk about the way this study and research informs Servitje’s teaching of Victorian literature and culture, which is often to students from outside the English major, and the deep relevance that his conversations with natural and social scientists has to making connections between the nineteenth century and our own moment amidst the COVID pandemic.</p>
-					</summary>
+					</section>
 					
 					<section aria-labelledby="series">
 						<h3 id="series">Positionality Series</h3>
