--- a/html/zoomcasts/walters.html
+++ b/html/zoomcasts/walters.html
@@ -70,10 +70,10 @@
             </ol>
           </section>
 
-					<summary aria-labelledby="overview">
+					<section aria-labelledby="overview">
 						<h3 id="overview">Zoomcast Overview</h3>
 						<p>Pearl Chaozon Bauer interviews Alisha Walters, Assistant Professor of 19th Century British Literature and Culture at Penn State University, Abington College.  Their conversation focuses around the importance of re-training ourselves as Victorian Studies faculty and scholars, not only to support our students’ needs but, more importantly, for our field’s survival.  Walters begins by discussing the necessity of querying our graduate school training, then segues into her experiences of moving from teaching in predominantly white Canadian institutions to teaching on an American campus in suburban Philadelphia at the start of the Trump administration. Chaozon Bauer and Walters also confront Victorian Studies as a largely white field and, for this reason, the value of reaching out to others outside of the discipline.  For example, Walters’ more recent scholarship engages with Black Studies and 19th-century American Studies. The interview closes with a meditation on the moves Victorian Studies must consider and make in order to evolve and survive in the changing landscape of higher education.</p>
-					</summary>
+					</section>
 					
 					<section aria-labelledby="series">
 						<h3 id="series">Positionality Series</h3>
