--- a/html/zoomcasts/chaozon-bauer.html
+++ b/html/zoomcasts/chaozon-bauer.html
@@ -70,10 +70,10 @@
             </ol>
           </section>
 
-					<summary aria-labelledby="overview">
+					<section aria-labelledby="overview">
 						<h3 id="overview">Zoomcast Overview</h3>
 						<p>In this Zoomcast conversation, Tricia and Pearl reframe their first Zoomcasts to discuss their recent shifts in academic positionality with respect to undisciplining and redefining the classroom. Pearl shares her newly empowered position of effecting change in Victorian studies as a UVC founder while being forced out of higher education.</p>
-					</summary>
+					</section>
 					
 					<section aria-labelledby="series">
 						<h3 id="series">Positionality Series</h3>
