--- a/html/zoomcasts/lootens.html
+++ b/html/zoomcasts/lootens.html
@@ -70,10 +70,10 @@
             </ol>
           </section>
 
-					<summary aria-labelledby="overview">
+					<section aria-labelledby="overview">
 						<h3 id="overview">Zoomcast Overview</h3>
 						<p>Chaozon Bauer interviews Tricia Lootens, Josiah Meigs Distinguished Teaching Professor of English at the University of Georgia. In 2005, Lootens’ questionings of longstanding practices of “writing Victorian Studies white,” which would eventually shape her Transatlantic <em>Political Poetess</em> (2017), began to extend to her engagement with the writing and reception of Indian poet, translator, critic, and novelist Toru Dutt. A member of the national Historical Poetics Working Group, Lootens was co-organizer, with Brigitte Fielder, Ryan D. Fong, and Jason Rudy, of the Summer 2020 virtual Dickens Universe Conference, which gathered African-Americanists and nineteenth-century British literature specialists to reflect on the critical pairing of Charles Dickens’s <em>David Copperfield</em> with Frances E. W. Harper’s <em>Iola Leroy</em>, a process planned to continue, if possible, in-person, in Summer 2022. In this zoomcast interview, we address Lootens' academic journey, how our students inform our changing pedagogies, and raise a few thoughts about trying to negotiate relations to the precarity of higher education, particularly as it affects our most structurally-vulnerable colleagues.</p>
-					</summary>
+					</section>
 
 					<section aria-labelledby="series">
 						<h3 id="series">Positionality Series</h3>
