--- a/0_dev/python-files/hinduism_imperial.html
+++ b/0_dev/python-files/hinduism_imperial.html
@@ -37,7 +37,7 @@
 			<header id="header"></header>
 
 			<main id="main" aria-labelledby="syllabus">
-				<h2 class="bottom" id="syllabus">Hinduism and Imperial Interventions in Victorian Literature</h2><!-- Change -->
+				<h2 id="syllabus">Hinduism and Imperial Interventions in Victorian Literature</h2><!-- Change -->
 				<div class="aspect-ratio-box">
 					<img src="/img/syllabi/uvc_0055-1800px.jpg" srcset="/img/syllabi/uvc_0055-1800px.jpg 1800w, /img/syllabi/uvc_0055-1650px.jpg 1650w, /img/syllabi/uvc_0055-1500px.jpg 1500w, /img/syllabi/uvc_0055-1350px.jpg 1350w, /img/syllabi/uvc_0055-1200px.jpg 1200w, /img/syllabi/uvc_0055-1050px.jpg 1050w, /img/syllabi/uvc_0055-900px.jpg 900w, /img/syllabi/uvc_0055-750px.jpg 750w, /img/syllabi/uvc_0055-600px.jpg 600w, /img/syllabi/uvc_0055-450px.jpg 450w, /img/syllabi/uvc_0055-300px.jpg 300w" sizes="(min-width: 1300px) 900px, (min-width: 1000px) calc(53.57vw + 214px), (min-width: 780px) 700px, 92.61vw" alt="Map showing British empire in 1909 with color coding for regions with different religious groups." title=""/><!-- Change -->
 					<a id="information" class="caption" href="#caption" aria-label="Go to image caption"><i class="fa fa-info-circle" title="Image information"></i></a>
