--- a/html/lesson_plans/east_asia_transimperial_introduction.html
+++ b/html/lesson_plans/east_asia_transimperial_introduction.html
@@ -37,7 +37,7 @@
 			<header id="header"></header>
 
 			<main id="main" aria-labelledby="lesson-plan">
-				<h2 class="bottom" id="lesson-plan">Transimperial Networks and East Asia</h2>
+				<h2 id="lesson-plan">Transimperial Networks and East Asia</h2>
 				<div class="aspect-ratio-box">
 					<img src="/img/lesson_plans/uvc_0051-1800px.jpg" srcset="/img/lesson_plans/uvc_0051-1800px.jpg 1800w, /img/lesson_plans/uvc_0051-1650px.jpg 1650w, /img/lesson_plans/uvc_0051-1500px.jpg 1500w, /img/lesson_plans/uvc_0051-1350px.jpg 1350w, /img/lesson_plans/uvc_0051-1200px.jpg 1200w, /img/lesson_plans/uvc_0051-1050px.jpg 1050w, /img/lesson_plans/uvc_0051-900px.jpg 900w, /img/lesson_plans/uvc_0051-750px.jpg 750w, /img/lesson_plans/uvc_0051-600px.jpg 600w, /img/lesson_plans/uvc_0051-450px.jpg 450w, /img/lesson_plans/uvc_0051-300px.jpg 300w" sizes="(min-width: 1300px) 900px, (min-width: 1000px) calc(53.57vw + 214px), (min-width: 780px) 700px, 92.61vw" alt="World map showing a large inner continent, China, surrounded the rest of the world as outer islands." title="Anonymous. “Korean Cheonhado Map.” Seventeenth-eighteeenth century, https://www.bc.edu/content/bc-web/centers/Ricci-Institute/online-exhibits/archives/korean-cheonhado-map.html. Ricci Institute for Chinese-Western Cultural History, Boston College. Courtesy of the Ricci Institute for Chinese-Western Cultural History, Boston College."/>
 					<a id="information" class="caption" href="#caption" aria-label="Go to image caption"><i class="fa fa-info-circle" title="Image information"></i></a>
