--- a/html/syllabi/victorian_women_world.html
+++ b/html/syllabi/victorian_women_world.html
@@ -37,7 +37,7 @@
 			<header id="header"></header>
 
 			<main id="main" aria-labelledby="syllabus">
-				<h2 class="bottom" id="syllabus">Victorian Women of the World</h2>
+				<h2 id="syllabus">Victorian Women of the World</h2>
 				<div class="aspect-ratio-box">
 					<img style="object-position: 50% 0%;" src="/img/syllabi/uvc_0032-0033-1350px.jpg" srcset="/img/syllabi/uvc_0032-0033-1350px.jpg 1350w, /img/syllabi/uvc_0032-0033-1200px.jpg 1200w, /img/syllabi/uvc_0032-0033-1050px.jpg 1050w, /img/syllabi/uvc_0032-0033-900px.jpg 900w, /img/syllabi/uvc_0032-0033-750px.jpg 750w, /img/syllabi/uvc_0032-0033-600px.jpg 600w, /img/syllabi/uvc_0032-0033-450px.jpg 450w, /img/syllabi/uvc_0032-0033-300px.jpg 300w" sizes="(min-width: 1300px) 900px, (min-width: 1000px) calc(53.57vw + 214px), (min-width: 780px) 700px, 92.61vw" alt="Left: Hiawatha and Minnehaha standing in a close, but open pose, holding hands and looking at one another. Right: Edmonia Lewis, seated, with wrap over her shoulders, in three-quarters profile facing to her right." title="(Left) Lewis, Edmonia. “Hiawatha’s Marriage.” 1871, https://commons.wikimedia.org/wiki/File:'Hiawatha's_Marriage',_marble_sculpture_by_Edmonia_Lewis,_1871.JPG. Wikimedia Commons. Public domain. (Right) Rocher, Henry. Edmonia Lewis. c 1870, https://commons.wikimedia.org/wiki/File:Motto_edmonia_lewis_original.jpg. Wikimedia Commons. Public domain."/>
 					<a id="information" class="caption" href="#caption" aria-label="Go to image caption"><i class="fa fa-info-circle" title="Image information"></i></a>
