--- a/0_dev/python-files/0_syllabus-template-3.html
+++ b/0_dev/python-files/0_syllabus-template-3.html
@@ -37,7 +37,7 @@
 			<header id="header"></header>
 
 			<main id="main" aria-labelledby="syllabus">
-				<h2 class="bottom" id="syllabus">{title}</h2><!-- Change -->
+				<h2 id="syllabus">{title}</h2><!-- Change -->
 				<div class="aspect-ratio-box">
 					<img src="/img/syllabi/uvc_{image-no}-1800px.jpg" srcset="/img/syllabi/uvc_{image-no}-1800px.jpg 1800w, /img/syllabi/uvc_{image-no}-1650px.jpg 1650w, /img/syllabi/uvc_{image-no}-1500px.jpg 1500w, /img/syllabi/uvc_{image-no}-1350px.jpg 1350w, /img/syllabi/uvc_{image-no}-1200px.jpg 1200w, /img/syllabi/uvc_{image-no}-1050px.jpg 1050w, /img/syllabi/uvc_{image-no}-900px.jpg 900w, /img/syllabi/uvc_{image-no}-750px.jpg 750w, /img/syllabi/uvc_{image-no}-600px.jpg 600w, /img/syllabi/uvc_{image-no}-450px.jpg 450w, /img/syllabi/uvc_{image-no}-300px.jpg 300w" sizes="(min-width: 1300px) 900px, (min-width: 1000px) calc(53.57vw + 214px), (min-width: 780px) 700px, 92.61vw" alt="{alt}" title="{image-title}"/><!-- Change -->
 					<a id="information" class="caption" href="#caption" aria-label="Go to image caption"><i class="fa fa-info-circle" title="Image information"></i></a>
