--- a/html/lesson_plans/east_asia_victorian_realism.html
+++ b/html/lesson_plans/east_asia_victorian_realism.html
@@ -37,7 +37,7 @@
 			<header id="header"></header>
 
 			<main id="main" aria-labelledby="lesson-plan">
-				<h2 class="bottom" id="lesson-plan">Victorian Realism, China, and the Politics of Form</h2>
+				<h2 id="lesson-plan">Victorian Realism, China, and the Politics of Form</h2>
 				<div class="aspect-ratio-box">
 					<img src="/img/lesson_plans/uvc_0047-1800px.jpg" srcset="/img/lesson_plans/uvc_0047-1800px.jpg 1800w, /img/lesson_plans/uvc_0047-1650px.jpg 1650w, /img/lesson_plans/uvc_0047-1500px.jpg 1500w, /img/lesson_plans/uvc_0047-1350px.jpg 1350w, /img/lesson_plans/uvc_0047-1200px.jpg 1200w, /img/lesson_plans/uvc_0047-1050px.jpg 1050w, /img/lesson_plans/uvc_0047-900px.jpg 900w, /img/lesson_plans/uvc_0047-750px.jpg 750w, /img/lesson_plans/uvc_0047-600px.jpg 600w, /img/lesson_plans/uvc_0047-450px.jpg 450w, /img/lesson_plans/uvc_0047-300px.jpg 300w" sizes="(min-width: 1300px) 900px, (min-width: 1000px) calc(53.57vw + 214px), (min-width: 780px) 700px, 92.61vw" alt="Waterfront area with trees in foreground, buildings at left, and water with houseboats at right." title="Lai Fong. ”Part of the Bund, Shanghai.“ 1870s, http://hdl.handle.net/10020/2003r22b7. The Getty Research Institute, Clark Worswick collection of photographs of China and Southeast Asia, 2003.R.22-b7.36r. Public domain. See The Getty Research Institutute's “Reproductions and Permissions” (https://www.getty.edu/research/library/using/reproductions_permissions/index.html)."/>
 					<a id="information" class="caption" href="#caption" aria-label="Go to image caption"><i class="fa fa-info-circle" title="Image information"></i></a>
