--- a/html/lesson_plans/seacole_recentering_nursing.html
+++ b/html/lesson_plans/seacole_recentering_nursing.html
@@ -38,7 +38,7 @@
 
 			<main id="main" aria-labelledby="lesson-plan">
           <div class="aspect-ratio-box">
-						<h2 class="bottom" id="lesson-plan">Recentering Nursing in Wartime</h2>
+						<h2 id="lesson-plan">Recentering Nursing in Wartime</h2>
           	<img style="object-position: 50% 15%;"  src="/img/lesson_plans/uvc_0011-0012-1050px.jpg" srcset="/img/lesson_plans/uvc_0011-0012-1050px.jpg 1050w, /img/lesson_plans/uvc_0011-0012-900px.jpg 900w, /img/lesson_plans/uvc_0011-0012-750px.jpg 750w, /img/lesson_plans/uvc_0011-0012-600px.jpg 600w, /img/lesson_plans/uvc_0011-0012-450px.jpg 450w, /img/lesson_plans/uvc_0011-0012-300px.jpg 300w" sizes="(min-width: 1300px) 900px, (min-width: 1000px) calc(53.57vw + 214px), (min-width: 780px) 700px, 92.61vw" alt="Left: Head and shoulders portrait of Mary Seacole facing to her right. Right: Three-quarters body portrait of Susie King Taylor, standing and facing to her right." title="(Left) Challen, Albert Charles. Mary Seacole. 1869, https://commons.m.wikimedia.org/wiki/File:Seacole_-_Challen.jpg. National Portrait Gallery. Public domain. (Right) Susie King Taylor. 1902, https://www.loc.gov/pictures/item/2003653538/. Library of Congress, General Collections. Public domain."/>
             <a id="information" class="caption" href="#caption" aria-label="Go to image caption"><i class="fa fa-info-circle" title="Image information"></i></a>
 					</div>
