--- a/html/syllabi/canon_fodder.html
+++ b/html/syllabi/canon_fodder.html
@@ -37,7 +37,7 @@
 			<header id="header"></header>
 
 			<main id="main" aria-labelledby="syllabus">
-				<h2 class="middle" id="syllabus">Canon Fodder: What Should We Read?</h2>
+				<h2 id="syllabus">Canon Fodder: What Should We Read?</h2>
 				<div class="aspect-ratio-box">
 					<img src="/img/syllabi/uvc_0042-1800px.jpg" srcset="/img/syllabi/uvc_0042-1800px.jpg 1800w, /img/syllabi/uvc_0042-1650px.jpg 1650w, /img/syllabi/uvc_0042-1500px.jpg 1500w, /img/syllabi/uvc_0042-1350px.jpg 1350w, /img/syllabi/uvc_0042-1200px.jpg 1200w, /img/syllabi/uvc_0042-1050px.jpg 1050w, /img/syllabi/uvc_0042-900px.jpg 900w, /img/syllabi/uvc_0042-750px.jpg 750w, /img/syllabi/uvc_0042-600px.jpg 600w, /img/syllabi/uvc_0042-450px.jpg 450w, /img/syllabi/uvc_0042-300px.jpg 300w" sizes="(min-width: 1300px) 900px, (min-width: 1000px) calc(53.57vw + 214px), (min-width: 780px) 700px, 92.61vw" alt="Series of tall library bookshelves receding into background." title="jarmoluk. [Untitled Photograph]. 15 Oct. 2014. Pixabay, https://pixabay.com/photos/library-books-bookcases-bookshelves-488690/. Pixabay License (https://pixabay.com/service/license/)."/>
 					<a id="information" class="caption" href="#caption" aria-label="Go to image caption"><i class="fa fa-info-circle" title="Image information"></i></a>
