--- a/html/syllabi/victorian_human.html
+++ b/html/syllabi/victorian_human.html
@@ -37,7 +37,7 @@
 			<header id="header"></header>
 
 			<main id="main" aria-labelledby="syllabus">
-				<h2 class="bottom" id="syllabus">The Victorian and the Human</h2>
+				<h2 id="syllabus">The Victorian and the Human</h2>
 				<div class="aspect-ratio-box">
 
 					<img style="object-position: 50% 100%;" src="/img/syllabi/uvc_0034-1800px.jpg" srcset="/img/syllabi/uvc_0034-1800px.jpg 1800w, /img/syllabi/uvc_0034-1650px.jpg 1650w, /img/syllabi/uvc_0034-1500px.jpg 1500w, /img/syllabi/uvc_0034-1350px.jpg 1350w, /img/syllabi/uvc_0034-1200px.jpg 1200w, /img/syllabi/uvc_0034-1050px.jpg 1050w, /img/syllabi/uvc_0034-900px.jpg 900w, /img/syllabi/uvc_0034-750px.jpg 750w, /img/syllabi/uvc_0034-600px.jpg 600w, /img/syllabi/uvc_0034-450px.jpg 450w, /img/syllabi/uvc_0034-300px.jpg 300w" sizes="(min-width: 1300px) 900px, (min-width: 1000px) calc(53.57vw + 214px), (min-width: 780px) 700px, 92.61vw" alt="A series of upright skeletons (left to right) of a gibbon, orangutan, chimpanzee, gorilla, and man." title="Hawkins, Benjamin Waterhouse. “Skeletons of the Gibbon. Orang. Chimpanzee. Gorilla. Man.” Evidence as to Man’s Place in Nature, by Thomas Henry Huxley, Williams and Norgate, 1863, frontispiece, https://archive.org/details/evidenceastomans63thom. Public domain."/>
