--- a/0_dev/python-files/0_syllabus-template-2.html
+++ b/0_dev/python-files/0_syllabus-template-2.html
@@ -86,6 +86,7 @@
 				<section aria-labelledby="works-cited">
 					<h3 id="works-cited">Works Cited</h3>
 
+					{works-cited}
 				</section>
 
 				<section aria-labelledby="series">
