--- a/0_dev/python-files/hinduism_imperial.html
+++ b/0_dev/python-files/hinduism_imperial.html
@@ -39,7 +39,7 @@
 			<main id="main" aria-labelledby="syllabus">
 				<h2 id="syllabus">Hinduism and Imperial Interventions in Victorian Literature</h2><!-- Change -->
 				<div class="aspect-ratio-box">
-					<img src="/img/syllabi/uvc_0055-1800px.jpg" srcset="/img/syllabi/uvc_0055-1800px.jpg 1800w, /img/syllabi/uvc_0055-1650px.jpg 1650w, /img/syllabi/uvc_0055-1500px.jpg 1500w, /img/syllabi/uvc_0055-1350px.jpg 1350w, /img/syllabi/uvc_0055-1200px.jpg 1200w, /img/syllabi/uvc_0055-1050px.jpg 1050w, /img/syllabi/uvc_0055-900px.jpg 900w, /img/syllabi/uvc_0055-750px.jpg 750w, /img/syllabi/uvc_0055-600px.jpg 600w, /img/syllabi/uvc_0055-450px.jpg 450w, /img/syllabi/uvc_0055-300px.jpg 300w" sizes="(min-width: 1300px) 900px, (min-width: 1000px) calc(53.57vw + 214px), (min-width: 780px) 700px, 92.61vw" alt="Map showing British empire in 1909 with color coding for regions with different religious groups." title=""/><!-- Change -->
+					<img src="/img/syllabi/uvc_0055-1800px.jpg" srcset="/img/syllabi/uvc_0055-1800px.jpg 1800w, /img/syllabi/uvc_0055-1650px.jpg 1650w, /img/syllabi/uvc_0055-1500px.jpg 1500w, /img/syllabi/uvc_0055-1350px.jpg 1350w, /img/syllabi/uvc_0055-1200px.jpg 1200w, /img/syllabi/uvc_0055-1050px.jpg 1050w, /img/syllabi/uvc_0055-900px.jpg 900w, /img/syllabi/uvc_0055-750px.jpg 750w, /img/syllabi/uvc_0055-600px.jpg 600w, /img/syllabi/uvc_0055-450px.jpg 450w, /img/syllabi/uvc_0055-300px.jpg 300w" sizes="(min-width: 1300px) 900px, (min-width: 1000px) calc(53.57vw + 214px), (min-width: 780px) 700px, 92.61vw" alt="Map showing British empire in 1909 with color coding for regions with different religious groups." title="Bartholomew, John George. Prevaling Religions: British Empire. 1909. Wikimedia Commons. https://commons.wikimedia.org/wiki/File:Brit_IndianEmpireReligions3.jpg. Public domain."/><!-- Change -->
 					<a id="information" class="caption" href="#caption" aria-label="Go to image caption"><i class="fa fa-info-circle" title="Image information"></i></a>
 				</div>
 
@@ -108,6 +108,10 @@
 				<section aria-labelledby="works-cited">
 					<h3 id="works-cited">Works Cited</h3>
 
+					<p>Banerjee, Sukanya, et al. &ldquo;Introduction: Widening the Nineteenth Century.&rdquo; <em>Victorian Literature and Culture</em>, vol. 49, no. 1, 2021, pp. 1&ndash;26.</p>
+<p>Freire, Paulo. <em>Pedagogy of the Oppressed</em>. Translated by Myra Bergman Ramos, 30th Anniversary Edition, Continuum, 2000.</p>
+<p>Pennington, Brian K. <em>Was Hinduism Invented? Britons, Indians, and the Colonial Construction of Religion</em>. Oxford University Press, 2005.</p>
+<p>Spivak, Gayatri Chakravorty. &ldquo;Can the Subaltern Speak?&rdquo; <em>Colonial Discourse and Post-Colonial Theory: A Reader</em>, edited by Patrick Williams and Laura Chrisman, Columbia University Press, 1994, pp. 66&ndash;110.</p>
 				</section>
 
 				<section aria-labelledby="series">
@@ -125,7 +129,7 @@
 				<section aria-labelledby="caption">
 					<h3 id="caption">Header Image Caption</h3>
 
-					<p></p>						
+					<p><p>Bartholomew, John George. <a aria-label="External Link" href="https://commons.wikimedia.org/wiki/File:Brit_IndianEmpireReligions3.jpg"><em>Prevaling Religions: British Empire</em></a>. 1909. <em>Wikimedia Commons</em>. Public domain.</p></p>						
 				</section>
 				
 				<section class="small" aria-labelledby="citation">
