--- a/0_dev/python-files/jewish_british.html
+++ b/0_dev/python-files/jewish_british.html
@@ -138,7 +138,7 @@
 				<section aria-labelledby="caption">
 					<h3 id="caption">Header Image Caption</h3>
 
-					<p><p>Carpenter, Shawn. “<a href="https://www.flickr.com/photos/spcbrass/4744175365/in/photostream/">Candle</a>.” 28 June 2010. <em>Flickr</em>. <a href="https://creativecommons.org/licenses/by-sa/2.0/">Creative Commons Attribution-ShareAlike 2.0 Generic (CC BY-SA 2.0)</a></p></p>
+					<p><p>Carpenter, Shawn. “<a aria-label="External Link" href="https://www.flickr.com/photos/spcbrass/4744175365/in/photostream/">Candle</a>.” 28 June 2010. <em>Flickr</em>. <a aria-label="External Link" href="https://creativecommons.org/licenses/by-sa/2.0/">Creative Commons Attribution-ShareAlike 2.0 Generic (CC BY-SA 2.0)</a></p></p>
 				</section>
 				
 				<section class="small" aria-labelledby="citation">
