--- a/0_dev/python-files/muslim_other.html
+++ b/0_dev/python-files/muslim_other.html
@@ -103,7 +103,7 @@
 					<p>Another way of achieving my pedagogical goal of developing a respectful and inclusive learning environment is to have students communicate with one another in threaded discussion assignments related to their assigned readings. In a threaded discussion, students respond on an online discussion board to one question out of a set and then comment on a peer’s response. These assignments prompt students to reflect on any internal biases they may have while they think critically about Islam and British literature in the nineteenth century. Another activity I plan on using, which I haven’t highlighted on the syllabus, is what I call “close viewing,” or analyzing visual arguments, where students critique various forms of visual media that depict stereotypical “oriental” imagery. It’s particularly important to teach students to analyze visual arguments on this topic because many stereotypes about Muslims were based on physical appearances. This activity prefaces the talk for each unit and engages students with different modes of media.</p>
 
 					<p>Unfortunately, the effects of colonialism remain in present-day forms of Islamophobia and xenophobia. Stereotypes that appeared in the nineteenth century have made their way back into social media and news outlets. Terms such as “uncivilized” have been used once again to portray Muslims and Arabs, recycling and re-affirming the type of “othering” prevalent during the nineteenth century. This course takes students back to when these ideas began to form through the works of British writers who discursively constructed the “Orient” without first-hand knowledge of Muslim and Arab peoples. Reading Arabic literature by Arab and Muslim authors that have been translated into English alongside British texts helps students to see how both cultures influenced one another and how the British and those from the Middle East formed their identities. By trying to understand Arab and Muslim “others” through their nineteenth-century writings, students hopefully come out of this class with a different perspective about those communities and perhaps with even the curiosity to read contemporary works by Arab, Arab-American, or Muslim authors.</p>
-					
+
 					<ol class="endnotes" aria-label="Endnotes">
 						<li class="small" id="edn1">On “widening” the nineteenth century, see Banerjee, Fong, and Michie.</li>
 					</ol>			
@@ -146,8 +146,8 @@
 				<section aria-labelledby="caption">
 					<h3 id="caption">Header Image Caption</h3>
 
-					<p><p>(Left) Boudewijn Huysmans. [<a href="https://unsplash.com/photos/J82Go1HjKPQ">Hand-Painted Illustration</a>]. 18 Oct. 2020. <em>Unsplash</em>. <a href="https://unsplash.com/license">Unsplash License</a>. <em>Full Title: Hand-painted illustration from probably a book about Islam. Most likely well over 100 years old.</em></p>
-<p>(Right) cottonbro studio. <em><a href="https://www.pexels.com/photo/woman-in-red-hijab-and-black-robe-4646231/">Woman in Red Hijab and Black Robe</a></em>. 28 May 2020. <em>Pexels</em>. <a href="https://www.pexels.com/license/">Pexels License</a>.</p></p>
+					<p><p>(Left) Boudewijn Huysmans. [<a aria-label="External Link" href="https://unsplash.com/photos/J82Go1HjKPQ">Hand-Painted Illustration</a>]. 18 Oct. 2020. <em>Unsplash</em>. <a aria-label="External Link" href="https://unsplash.com/license">Unsplash License</a>. <em>Full Title: Hand-painted illustration from probably a book about Islam. Most likely well over 100 years old.</em></p>
+<p>(Right) cottonbro studio. <em><a aria-label="External Link" href="https://www.pexels.com/photo/woman-in-red-hijab-and-black-robe-4646231/">Woman in Red Hijab and Black Robe</a></em>. 28 May 2020. <em>Pexels</em>. <a aria-label="External Link" href="https://www.pexels.com/license/">Pexels License</a>.</p></p>
 				</section>
 				
 				<section class="small" aria-labelledby="citation">
