--- a/sitemap.html
+++ b/sitemap.html
@@ -97,6 +97,14 @@
 
 						<li role="none"><a href="/html/syllabi.html"><span id="syllabi">Syllabi</span></a>
 							<ol>
+								<li>The Nineteenth-Century Religious Other
+									<ol>
+										<li><a href="/html/syllabi/hinduism_imperial.html">Hinduism and Imperial Interventions in Victorian Literature</a></li>
+										<li><a href="/html/syllabi/jewish_british.html">Nineteenth-Century Jewish British Literature</a></li>
+										<li><a href="/html/syllabi/muslim_other.html">The Muslim “Other” in Nineteenth-Century British Literature</a></li>
+									</ol>
+								</li>
+
 								<li>Deconstructing the Literary Canon
 									<ol>
 										<li><a href="/html/syllabi/uvc_india_jude.html">UVC in India: Case Study of JUDE</a></li>
