--- a/html/about/project_contributors.html
+++ b/html/about/project_contributors.html
@@ -57,6 +57,7 @@
 						<li><strong>Kira Braham</strong> (Louisiana School for Math, Science, and the Arts)</li>
 						<li><strong>Michelle Prain Brice</strong> (Universidad Adolfo Ibañez; Pontificia Universidad Católica de Valparaíso)</li>
 						<li><strong>Lindsey N. Chappell</strong> (Georgia Southern University)</li>
+						<li><strong>Sanjana Chowdhury</strong> (Texas Christian University)</li>
 						<li><strong>Jesse Cordes Selbin</strong> (Gettysburg College)</li>
 						<li><strong>Jenée Crayne</strong> (Notre Dame de Namur University)</li>
 						<li><strong>Meg Dobbins</strong> (Eastern Michigan Universit)</li>
@@ -67,6 +68,7 @@
 						<li><strong>Jennifer Hayward</strong> (College of Wooster)</li>
 						<li><strong>Amy Kahrmann Huseby</strong> (Florida International University)</li>
 						<li><strong>Priyanka Anne Jacob</strong> (Loyola University Chicago)</li>
+						<li><strong>Alyssa Quinn Johnson</strong> (Texas Christian University)</li>
 						<li><strong>Heidi Kaufman</strong> (University of Oregon)</li>
 						<li><strong>Cherrie Kwok</strong> (University of Virginia)</li>
 						<li><strong>Ji Eun Lee</strong> (Sungkyunkwan University)</li>
@@ -80,6 +82,7 @@
 						<li><strong>Jessie Reeder</strong> (Binghamton University)</li>
 						<li><strong>Jason Rudy</strong> (University of Maryland, College Park)</li>
 						<li><strong>Anne Schwan</strong> (Edinburgh Napier University)</li>
+						<li><strong>Dana Aicha Shaaban (Texas Christian University)</li>
 						<li><strong>Breanna Simpson</strong> (York University)</li>
 						<li><strong>Jessica R. Valdez</strong> (University of East Anglia)</li>
 						<li><strong>Alisha Walters</strong> (Penn State Abington)</li>
