--- a/html/about/project_contributors.html
+++ b/html/about/project_contributors.html
@@ -82,7 +82,7 @@
 						<li><strong>Jessie Reeder</strong> (Binghamton University)</li>
 						<li><strong>Jason Rudy</strong> (University of Maryland, College Park)</li>
 						<li><strong>Anne Schwan</strong> (Edinburgh Napier University)</li>
-						<li><strong>Dana Aicha Shaaban (Texas Christian University)</li>
+						<li><strong>Dana Aicha Shaaban</strong> (Texas Christian University)</li>
 						<li><strong>Breanna Simpson</strong> (York University)</li>
 						<li><strong>Jessica R. Valdez</strong> (University of East Anglia)</li>
 						<li><strong>Alisha Walters</strong> (Penn State Abington)</li>
